Fixing issue with appointments and how it stretches

--- a/client/src/Modules/HojaDeEstilos/Dashboard.css
+++ b/client/src/Modules/HojaDeEstilos/Dashboard.css
@@ -534,7 +534,7 @@
     margin-top: 0px;
     margin-bottom: 0px;
     background-color: #1560F2;
-    width: 95%;
+    width: 100%;
     gap: 20px;
 }
 
@@ -568,10 +568,11 @@
 .appointments-container {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: stretch;
+    justify-content: flex-start;
 
-    padding-left: 10px;
-    padding-right: 10px;
+    /* padding-left: 10px;
+    padding-right: 10px; */
     padding-top: 10px;
     padding-bottom: 10px;
 
@@ -596,12 +597,11 @@
     gap: 10px;
     width: 100%;
     border-radius: 10px;
-    height: 100%;
-    max-height: 370px;
+    height: min-content;
 
     font-family: 'Inter';
 
-    overflow-y: scroll;
+    overflow-y: auto;
     scrollbar-width: thin;
 }
 
@@ -975,6 +975,11 @@
         margin-top: 0px;
     }
 
+    .appointments {
+        max-height: 400px;
+        overflow: auto;
+    }
+
 }
 
 @media only screen and (min-width: 820px) and (max-width: 950px) {
@@ -1022,4 +1027,5 @@
         justify-content: center;
         text-align: center;
     }
+
 }
